Added the ability to return all histories via REST endpoint. Refactored to move endpoints out of Boot.