@@ -1,2 +1,2 @@
 set SCRIPT_DIR=%~dp0
-java -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256m -Xmx512M -Xss2M -Dlogback.configurationFile=config/logback.xml -Drun.mode=development -Dmetlx.configurationFile=config/configuration.local.xml -Dquacker.configDirectoryLocation="../cscConfiguration/quacker/monitoringDashboardConfig" -jar "%SCRIPT_DIR%\sbt-launch-0.13.6.jar" %*
+java -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -Xmx512M -Xss2M -Dlogback.configurationFile=config/logback.xml -Drun.mode=development -Dmetlx.configurationFile=config/configuration.local.xml -Dquacker.configDirectoryLocation="monitoringDashboardConfig" -jar "%SCRIPT_DIR%\sbt-launch-0.13.6.jar" %*
